<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="?attr/colorOnPrimary"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/main_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="25dp"
            app:circularflow_defaultRadius="10dp">

            <LinearLayout
                android:id="@+id/contentInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iconHome"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0"
                    android:src="@drawable/ic_home" />

                <TextView
                    android:id="@+id/textHomeInfo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/exo_2"
                    android:gravity="bottom"
                    android:text="@string/textHomeInfo"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iconMore"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/ic_more_options" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contentDetailInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/regionTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/exo_2"
                        android:text="@string/regionTitle"
                        android:textColor="?attr/colorSecondary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/regionText"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/exo_2_italic"
                        android:text="@string/regionTextDefault"
                        android:textColor="?attr/colorSecondary"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cityTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/exo_2"
                        android:text="@string/cityTitle"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cityText"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/exo_2_italic"
                        android:text="@string/cityTextDefault"
                        android:textColor="?attr/colorSecondary"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/addressTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/exo_2"
                        android:text="@string/addressTitle"
                        android:textColor="?attr/colorSecondary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/addressText"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/exo_2_italic"
                        android:text="@string/addressTextDefault"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/indexTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/exo_2"
                        android:text="@string/indexTitle"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/indexText"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/exo_2_italic"
                        android:text="@string/indexTextDefault"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>